--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "spryker/store": "^1.0.0",
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.25.0",
+        "spryker/translator": "^1.1.0",
         "spryker/wishlist-extension": "^1.2.0"
     },
     "require-dev": {
