TE-10039: Restore prefer lowest regression checking (#8849)
TE-10039 Re-enable proper prefer lowest checking

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,7 @@
 parameters:
     checkGenericClassInNonGenericObjectType: false
     checkMissingIterableValueType: false
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
+      - '#Parameter \#1 \$id of method .+PriceProductOfferToTranslatorFacadeInterface::trans\(\) expects string, object|string given.#'
+
