TE-10139 PHPStan 1.0 upgrade (#8949)
TE-10139 PHPStan 1.0 integration

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,5 +3,5 @@ parameters:
     checkMissingIterableValueType: false
     reportUnmatchedIgnoredErrors: false
     ignoreErrors:
-      - '#Parameter \#1 \$id of method .+PriceProductOfferToTranslatorFacadeInterface::trans\(\) expects string, object|string given.#'
+      - '#Parameter \#1 \$id of method .+PriceProductOfferToTranslatorFacadeInterface::trans\(\) expects string, object\|string given.#'
 
