MP-3957 Added Offer and Merchant Product to Shopping List (#8965)
MP-3957 Add Offer and Merchant Product to Shopping List

--- a/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
+++ b/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
@@ -26,6 +26,7 @@ suites:
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Zed\Testify\Helper\BusinessHelper
                 - \SprykerTest\Zed\ProductOffer\Helper\ProductOfferHelper
+                - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\PriceProduct\Helper\PriceProductDataHelper
                 - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
                 - \SprykerTest\Shared\PriceProductOffer\Helper\PriceProductOfferHelper
