--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
+        "spryker/product": "*",
         "spryker/propel": "*",
         "spryker/testify": "*"
     },
