TE-10574 Fix up phpstan config (#9063)
* TE-10574 Fix up phpstan config

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 parameters:
+    level: 8
     checkGenericClassInNonGenericObjectType: false
     checkMissingIterableValueType: false
     reportUnmatchedIgnoredErrors: false
     ignoreErrors:
-      - '#Parameter \#1 \$id of method .+PriceProductOfferToTranslatorFacadeInterface::trans\(\) expects string, object\|string given.#'
-
+        - '#Parameter \#1 \$id of method .+PriceProductOfferToTranslatorFacadeInterface::trans\(\) expects string, object\|string given.#'
