--- a/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
+++ b/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
@@ -30,3 +30,5 @@ suites:
                 - \SprykerTest\Shared\PriceProduct\Helper\PriceProductDataHelper
                 - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
                 - \SprykerTest\Shared\PriceProductOffer\Helper\PriceProductOfferHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
