--- a/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
+++ b/tests/SprykerTest/Zed/PriceProductOffer/codeception.yml
@@ -31,4 +31,5 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
                 - \SprykerTest\Shared\PriceProductOffer\Helper\PriceProductOfferHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDataHelper
